Sort generated qrc

For reproducible builds (https://reproducible-builds.org)

Sadly I don't have a particularly strong reproducer for this problem, but testing manually with disorderfs and inspecting the results \_suggests\_ this does the trick.

BUG: 508718